--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body{
 }
 .item{
     max-height: 250px;
+    min-height: 250px;
     margin-right: 20px;
 }
 
@@ -25,3 +26,4 @@ body{
 ::-webkit-scrollbar{
     display: none;
 }
+
