--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,21 +9,59 @@ body{
 .posters{
     display: flex;
     padding: 30px;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 .item{
     max-height: 250px;
     min-height: 250px;
     margin-right: 20px;
+    border: 0px;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+/* width */
+.posters::-webkit-scrollbar {
+    width: 3px;
+    height: 8px;
+    padding-left: 20px;
+  }
+  
+  /* Track */
+  .posters::-webkit-scrollbar-track {
+    display: none;
+  }
+   
+  /* Handle */
+  .posters::-webkit-scrollbar-thumb {
+    background: rgba(19, 19, 19, 0.301); 
+    width: 25px;
+    border-radius: 10px;
+    transition: 0.5s;
+  }
+  
+  /* Handle on hover */
+  .posters::-webkit-scrollbar-thumb:hover {
+    background: rgb(51, 51, 51); 
+  }
+
+  @media only screen and (max-device-width: 1366px) {
+    .posters::-webkit-scrollbar {
+        display: none;
+      }
+  }
+
+.item:hover{
+    transform: scale(1.3, 1.3);
+    z-index: 100;
 }
 
-@media only screen and (max-device-width: 1366px) {
+@media only screen and (max-device-width: 700px) {
     .item {
       max-width: 150px;
     }
   }
 
-::-webkit-scrollbar{
+  body::-webkit-scrollbar {
     display: none;
-}
-
+  }
